# wordnumber

./: README.md  wordnumber.cabal
src/: WordNumber.hs
tests/: tests.hs
